--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
       DB8fHx8&auto=format&fit=crop&w=1170&q=80"
       alt="jidlo" class="rounded ion-margin-bottom">
     <!--<img
-      src="{{recipe.image}}" alt="jidlo">-->
+      src="{{recipe.image}}" alt="jidlo" jsem bobeeeek>-->
     <ion-grid>
       <ion-row>
         <ion-col>
