--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -26,8 +26,7 @@
 
     </ion-item>
     <ion-item>
-      <ion-label position="floating">hlobrazek</ion-label>
-      <ion-input [(ngModel)]="hlavniObrazek" type="file"></ion-input>
+      <input type="file" placeholder="File">
     </ion-item>
     <ion-row>
       <ion-col>
