--- a/src/app/pages/update-recept/update-recept.page.html
+++ b/src/app/pages/update-recept/update-recept.page.html
@@ -25,7 +25,7 @@
   </ion-item>
   <ion-item>
     <ion-label position="floating">hlobrazek</ion-label>
-    <ion-input [(ngModel)]="hlavniObrazek" type="file"></ion-input>
+    <ion-input [(ngModel)]="hlavniObrazek" type="text"></ion-input>
   </ion-item>
   <ion-row>
     <ion-col>
