přidání upozornění u přihlašování

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -8,8 +8,8 @@
   <ion-avatar class="ion-margin">
     <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar">
   </ion-avatar>
-  <h1 class="ion-text-center">Jméno Příjmení</h1>
-  <p class="ion-text-center pismo ion-no-margin ion-margin-bottom">email@seznam.cz</p>
+  <h1 class="ion-text-center">{{jmeno}} {{prijmeni}}</h1>
+  <p class="ion-text-center pismo ion-no-margin ion-margin-bottom">{{email}}</p>
   <ion-grid>
     <ion-row>
       <ion-col>
