--- a/src/app/pages/createuser/createuser.page.html
+++ b/src/app/pages/createuser/createuser.page.html
@@ -5,21 +5,57 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
-  <ion-item color="light" class="ion-margin user">
-    <ion-input type="text" placeholder="Jméno" [(ngModel)]="jmeno" ></ion-input>
-  </ion-item>
-  <ion-item color="light" class="ion-margin user">
-    <ion-input type="text" placeholder="Příjmení" [(ngModel)]="prijmeni"></ion-input>
-  </ion-item>
-  <ion-item color="light" class="ion-margin user">
-    <ion-input type="text" placeholder="E-mail" [(ngModel)]="email"></ion-input>
-  </ion-item>
-  <ion-item color="light" class="ion-margin user">
-    <ion-input type="password" placeholder="Heslo" [(ngModel)]="heslo"></ion-input>
-  </ion-item>
-  <ion-row>
-    <ion-col>
-      <ion-button type="button" routerLink="/login" (click)="addUser()" shape="block" expand="block">Vytvořit účet</ion-button>
-    </ion-col>
-  </ion-row>
+  <form (ngSubmit)="addUser()" [formGroup]="ionicForm" novalidate>
+
+    <!--Jméno -->
+    <ion-item class="ion-margin user" color="light">
+      <ion-input [(ngModel)]="jmeno" formControlName="name" placeholder="Jméno" type="text"></ion-input>
+    </ion-item>
+    <!--Jméno validace -->
+    <span *ngIf="isSubmitted && errorControl.name.errors?.minlength" class="error ion-padding">
+    Jméno by mělo být dlouhé alespoň 2 znaky</span>
+    <span *ngIf="isSubmitted && errorControl.name.errors?.required" class="error ion-padding">
+    Prosím, vyplňte své jméno</span>
+
+
+    <!--Příjmení -->
+    <ion-item class="ion-margin user" color="light">
+      <ion-input [(ngModel)]="prijmeni" formControlName="lastname" placeholder="Příjmení" type="text"></ion-input>
+    </ion-item>
+    <!--Příjmení validace-->
+    <span *ngIf="isSubmitted && errorControl.lastname.errors?.required" class="error ion-padding">
+    Prosím, vyplňte své příjmení</span>
+    <span *ngIf="isSubmitted && errorControl.lastname.errors?.minlength" class="error ion-padding">
+    Příjmení by mělo být dlouhé alespoň 2 znaky</span>
+
+
+    <!--E-mail -->
+    <ion-item class="ion-margin user" color="light">
+      <ion-input [(ngModel)]="email" formControlName="email" placeholder="E-mail" type="text"></ion-input>
+    </ion-item>
+    <!--E-mail validace-->
+    <span *ngIf="isSubmitted && errorControl.email.errors?.required" class="error ion-padding">
+    Prosím, zadejte svůj e-mail</span>
+    <span *ngIf="isSubmitted && errorControl.email.errors?.pattern" class="error ion-padding">
+    Zadejte validní e-mail</span>
+
+
+
+    <!--heslo-->
+    <ion-item class="ion-margin user" color="light">
+      <ion-input [(ngModel)]="heslo" formControlName="password" placeholder="Heslo" type="password"></ion-input>
+    </ion-item>
+    <!--heslo validace-->
+    <span *ngIf="isSubmitted && errorControl.password.errors?.required" class="error ion-padding">
+    Prosím, zadejte heslo</span>
+    <span *ngIf="isSubmitted && errorControl.password.errors?.minlength" class="error ion-padding">
+    Heslo by mělo být dlouhé alespoň 5 znaků</span>
+
+    <ion-row>
+      <ion-col>
+        <ion-button expand="block" shape="block" type="submit">Vytvořit účet
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </form>
 </ion-content>
