--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -26,7 +26,7 @@
 
     </ion-item>
     <ion-item>
-      <input type="file" placeholder="File">
+      <input type="text" [(ngModel)]="hlavniObrazek" >
     </ion-item>
     <ion-row>
       <ion-col>
