--- a/src/app/pages/detailpage/detailpage.page.html
+++ b/src/app/pages/detailpage/detailpage.page.html
@@ -1,6 +1,10 @@
 <ion-content class="ion-padding-top">
   <ion-back-button defaultHref="/tabs/tab1" text="" color="light" class="ion-float-left paddingl"></ion-back-button>
-  <ion-icon name="heart-outline" class="ion-float-right paddingr" color="light"></ion-icon>
+  <button (click)="addFavouriteRecept()" class="ion-float-right paddingr">
+    <ion-icon *ngIf="heart" name="heart" color="light"></ion-icon>
+    <ion-icon *ngIf="!heart" name="heart-outline" color="light"></ion-icon>
+  </button>
+
   <div id="content-fit"> <!-- Je zde kvůli přechodu barev, aby nevnikal bug -->
     <img class="picture"
          src="https://images.unsplash.com/photo-1541167760496-1628856ab772?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Y29mZmVlfGVufDB8MHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
