poslední zmeny - vse ok

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,4 +16,5 @@
       <ion-button type="button" (click)="login(email)" shape="block" expand="block">Přihlásit se</ion-button>
     </ion-col>
   </ion-row>
+  <p class="ion-text-center zmena " [routerLink]="['/createuser']" >Nemáte účet? Vytvořte si ho!</p>
 </ion-content>
