--- a/src/app/pages/createuser/createuser.page.html
+++ b/src/app/pages/createuser/createuser.page.html
@@ -58,4 +58,5 @@
       </ion-col>
     </ion-row>
   </form>
+  <p class="ion-text-center zmena " [routerLink]="['/login']" >Máte již účet? Přihlaste se!</p>
 </ion-content>
