--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -24,7 +24,8 @@
         </ion-col>
         <ion-col size="3">
           <div>
-            <ion-icon name="heart-outline" class="icon" size="large"></ion-icon>
+            <ion-icon *ngIf="heart" name="heart" class="icon" color="light" size="large"></ion-icon>
+            <ion-icon *ngIf="!heart" name="heart-outline" class="icon" color="dark" size="large"></ion-icon>
           </div>
         </ion-col>
       </ion-row>
