--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -26,7 +26,8 @@
 
     </ion-item>
     <ion-item>
-      <input type="text" [(ngModel)]="hlavniObrazek" >
+      <ion-label position="floating">Obrázek</ion-label>
+      <ion-input type="text" [(ngModel)]="hlavniObrazek" ></ion-input>
     </ion-item>
     <ion-row>
       <ion-col>
