--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,15 +1,13 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Profil</ion-title>
-  </ion-toolbar>
-</ion-header>
+
+  <p class="zmena ion-text-right ion-padding" [routerLink]="['/login']" (click)="logout()">Odhlásit se</p>
+
 
 <ion-content>
   <ion-avatar class="ion-margin">
     <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar">
   </ion-avatar>
   <h1 class="ion-text-center">{{jmeno}} {{prijmeni}}</h1>
-  {{id}}
+  <!--{{id}}-->
   <p class="ion-text-center pismo ion-no-margin ion-margin-bottom">{{email}}</p>
   <ion-grid>
     <ion-row>
