--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -22,9 +22,9 @@
             <!--<span class="title">{{recept.popisek}}</span>-->
           </div>
         </ion-col>
-        <ion-col size="3">
-          <div>
-            <ion-icon name="heart-outline" class="icon" size="large"></ion-icon>
+        <ion-col>
+          <div class="ion-text-end">
+            #{{recept.name}}
           </div>
         </ion-col>
       </ion-row>
