--- a/src/app/pages/detailpage/detailpage.page.scss
+++ b/src/app/pages/detailpage/detailpage.page.scss
@@ -2,7 +2,7 @@
   font-size: 17px;
   color: #B7C4CB;
   font-weight: normal;
-  margin-right: 35%;
+  margin-right: 5%;
   margin-top: 5px;
 }
 .name{
@@ -73,3 +73,5 @@ ion-segment-button:before{
 .paddingr{
   padding-right: 5%;
 }
+.element1 {display:inline-block;margin-right:10px; margin-top: -10px;padding-top: 15px}
+.element2 {display:inline-block; font-size: 17px; text-decoration: none}
