--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -18,3 +18,21 @@
 .fill{
   border: 1px solid white;
 }
+.green{
+  padding: 5px 10px;
+  color:white;
+  background-color: #2dd36f;
+  border-radius: 5%;
+}
+.orange{
+  padding: 5px 10px;
+  color:white;
+  background-color: #ffc409;
+  border-radius: 5%;
+}
+.red{
+  padding: 5px 10px;
+  color:white;
+  background-color:#eb445a;
+  border-radius: 5%;
+}
