--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" *ngIf="!empty">
   <ion-card *ngFor="let recept of oblibenerecepty" [routerLink]="['/detailpage/', recept.id]" class="ion-padding">
     <img
       src="https://images.unsplash.com/photo-1618902515708-0972a312344b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVuf
@@ -30,4 +30,8 @@
       </ion-row>
     </ion-grid>
   </ion-card>
+</ion-content>
+<ion-content [fullscreen]="true" *ngIf="empty" class="ion-padding">
+ <h5 class=" ion-text-center">Zatím nemáme žádné oblíbené recepty</h5>
+  <img src="https://images.unsplash.com/photo-1611003229235-fb5748510459?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80">
 </ion-content>
