--- a/src/app/pages/editprofile/editprofile.page.scss
+++ b/src/app/pages/editprofile/editprofile.page.scss
@@ -12,4 +12,10 @@ ion-avatar {
 .zmena{
   font-size: small;
   color: #3880ff;
+  text-align: center !important;
+}
+.file{
+  opacity: 0;
+  position: absolute;
+
 }
