--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -72,14 +72,18 @@
     </ion-item>
 
 
-
-
     <ion-item>
-      <ion-label position="floating">Obrázek</ion-label>
-      <ion-input type="text" [(ngModel)]="hlavniObrazek" formControlName="hlavniobrazek" ></ion-input>
+      <ion-input type="file" class="file" aria-label="File browser example" [(ngModel)]="hlavniObrazek"
+                 formControlName="hlavniobrazek" accept="image/png, image/jpg"
+                 (change)="onFileSelected($event)"></ion-input>
+      <span *ngIf="!nahrano"  class="file-custom">Nahrát obrázek</span>
+      <span *ngIf="nahrano"  class="file-custom">Obrázek byl nahrán</span>
       <span *ngIf="isSubmitted && errorControl.hlavniobrazek.errors?.required" class="error">
     Přidejte obrázek receptu</span>
     </ion-item>
+    <div id="display_image">
+
+    </div>
     <!--obrazek validace -->
 
     <ion-row>
