--- a/src/app/pages/detailpage/detailpage.page.html
+++ b/src/app/pages/detailpage/detailpage.page.html
@@ -7,7 +7,7 @@
 
   <div id="content-fit"> <!-- Je zde kvůli přechodu barev, aby nevnikal bug -->
     <img class="picture"
-         src="https://images.unsplash.com/photo-1541167760496-1628856ab772?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Y29mZmVlfGVufDB8MHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+        src="{{_apiService.getUrl('/' + hlavniObrazek)}}"
          alt="jídlo">
     <div class="pozice">
       <div class="description ion-padding">
