--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -3,8 +3,11 @@
 
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-avatar class="ion-margin">
-    <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar">
+    <img src="{{avatar}}" alt="avatar" >
   </ion-avatar>
   <h1 class="ion-text-center">{{jmeno}} {{prijmeni}}</h1>
   <!--{{id}}-->
